--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,viewport-fit=cover">
-    <link rel='icon' href='favicon.ico'>
+    <link rel='icon' href='favicon.png'>
     <title>Zach Winter • UI/UX</title>
   </head>
   <body>
