--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <link rel="preload" href="/screenshots/msf.02.jpg" as="image" />
     <link rel="preload" href="/screenshots/msf.03.jpg" as="image" />
     <link rel="preload" href="/screenshots/msf.04.jpg" as="image" />
-    <link rel="preload" href="/screenshots/covid.01.jpg" as="image" />
-    <link rel="preload" href="/screenshots/covid.02.jpg" as="image" />
-    <link rel="preload" href="/screenshots/covid.03.jpg" as="image" />
+    <link rel="preload" href="/screenshots/covid.01.png" as="image" />
+    <link rel="preload" href="/screenshots/covid.02.png" as="image" />
+    <link rel="preload" href="/screenshots/covid.03.png" as="image" />
     <title>Zach Winter • UI/UX</title>
   </head>
   <body>
